<resources>
    <string name="app_name">IntelliTask</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">navigation_drawer_open\n</string>
    <string name="drawer_close">navigation_drawer_close\n</string>
    <string name="update_button_name">Update</string>
    <string name="are_you_sure_you_have_finished_this_task">Are you sure you have finished this task?</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account_create_one">Don\'t have an account? Create one!</string>
    <string name="sign_up">Sign up</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="sign_in_with_email_address">Sign in with email address</string>
    <string name="sign_in_capital">SIGN IN</string>
    <string name="background_image">background_image</string>
    <string name="sign_up_text">SIGN UP</string>
    <string name="sign_up_with_email_address">Sign up with email address</string>
    <string name="username">Username</string>
    <string name="sep">sep</string>
    <string name="register">register</string>
    <string name="backgroundobject">backgroundObject</string>
    <string name="backgroundobjecttwo">backgroundObjectTwo</string>
    <string name="Calender">Calender</string>
    <string name="Index">Index</string>
    <string name="Profile">Profile</string>
    <string name="Focus">Focus</string>
    <string name="Add" />
    <string name="index">Index\n</string>
    <string name="calenderr">Calender</string>
    <string name="focus">Focus</string>
    <string name="profile">Profile</string>
    <string name="task_management_amp_to_do_list"><![CDATA[Task Management & To-Do List]]></string>
    <string name="statistics">Statistics</string>
    <string name="focus_mode_empowers_users_to_block_distractions_boost_productivity_and_achieve_deep_work_effortlessly">Focus mode empowers users to block distractions, boost productivity, and achieve deep work effortlessly!</string>
    <string name="unleash_your_productivity_with_focus_mode">Unleash Your Productivity with Focus Mode</string>
    <string name="experience_unparalleled_efficiency_with_our_ai_powered_task_management_app_streamlining_organization_prioritization_and_productivity">Experience unparalleled efficiency with our AI-powered task management app, streamlining organization, prioritization, and productivity.</string>
    <string name="title">Title</string>
    <string name="update">Update</string>
    <string name="dndon">"Do not disturb : <b>ON</b>"</string>
    <string name="dndoff">"Do not disturb : <b>OFF</b>"</string>
    <string name="do_not_disturb_b"><![CDATA[Do not disturb : <b>]]></string>
</resources>